--- a/site-kadai.css
+++ b/site-kadai.css
@@ -198,7 +198,7 @@ a{
 .contact{
     color: aqua;
     background-image: linear-gradient(180deg,rgba(252, 255, 133, 1) 0%,#fff 30%);
-    padding: 50px;
+    padding: 100px;
 }
 
 .dis {
@@ -229,6 +229,9 @@ a{
 	padding-top:		80px;	/* ホバーで下にずらす */
 }
 
+.bikou{
+    font-size: 15px;
+}
 @media (max-width: 700px){
     .detail{
         display: block;
